ui/css/style.css
.main-container {
    height: 100%;
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: row;
            flex-flow: row;
}

html, body {
    height: 100%;
    font-size: 12px;
    font-family: 'Open Sans', 'Helvetica', 'Arial';
}

.roster-container, .messages-container {
    height: 100%;
    box-sizing: border-box;
    overflow-y: auto;
    overflow-x: hidden;
}

.roster-container .group {
    margin-top: 10px;
}

.roster-container .roster-list {
    flex: 1;
    overflow: auto;
}

.roster-container .roster-search {
    position: relative;
    background: rgba(0,0,0,.1);
    border-top: 4px solid #33393d;
}
.roster-container .roster-search input {
    background: transparent;
    border: none;
    box-shadow: none;
    padding-left: 31px;
}

.roster-container .roster-search .glyphicon {
    position: absolute;
    left: 10px;
    top: 10px;
    color: #666;
    pointer-events: none;
}

.roster-container .group-header {
    font-weight: 700;
    color: #666;
    padding: 4px 10px;
    cursor: pointer;
}
.roster-container .group-header:hover {
    color: #999;
}

.roster-container .thread {
    position: relative;
    cursor: pointer;
}

.roster-container .unread-count {
    position: absolute;
    top: 6px;
    right: 8px;
    background: rgb(51, 116, 187);
}

.roster-container .thread:hover .user .state-icon {
    visibility: hidden;
}

.roster-container .threads {
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: rgba(0,0,0,.1);
    margin-bottom: 10px;
    margin-top: 0px;
}

.roster-container .thread .close-thread {
    position: absolute;
    top: -1px;
    left: 1px;
    color: transparent;
    cursor: pointer;
    padding: 8px;
}

.roster-container .thread:hover .close-thread {
    color: #555;   
}

.roster-container .thread .close-thread:hover {
    color: #fff;
}

.roster-container .group-toggle {
    float: right;
    display: inline-block;
    border-top-color: #666;
    position: relative;
    top: 7px;
}

.roster-container .group-header.collapsed .group-toggle {
    border-top: 0 dotted #000000;
    border-right: 4px solid transparent;
    border-bottom: 4px solid #666;
    border-left: 4px solid transparent;
}

.roster-container {
    width: 225px;
    background: #33393d;
    display: -webkit-flex;
display:         flex;
-webkit-flex-flow: column;
        flex-flow: column;
}

.roster-container .user {
    padding: 6px 20px 6px 10px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    width: 100%;
    /*border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
    margin-top: -1px;*/
    cursor: pointer;
    color: #555;
}

.roster-container .user:hover .name {
    color: #fff;
}

.roster-container .user .name,
.messages-container .user .name {
    font-weight: 700;
    color: #aaa;
}

.user .status-text {
    margin-left: 5px;
}


.user .state-icon {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    border: 2px solid #333;
    margin-right: 8px;
}

.user.online .state-icon {
    border-color: rgb(36,156,78);
}

.user.away .state-icon {
    border-color: #ccc;
}
.user.offline .state-icon {
    border-color: #444;
}

.user.xa .state-icon {
    border-color: #ddd;
}

.user.composing .state-icon {
    -webkit-animation: pulsate .75s ease-in-out;
    -webkit-animation-iteration-count: infinite; 
    -webkit-animation-direction: alternate;
}
@-webkit-keyframes pulsate {
    0% {-webkit-transform: scale(1, 1); opacity: 1.0;}
    100% {-webkit-transform: scale(0.8, 0.8); opacity: .8;}
}

.user.dnd .state-icon {
    background-color: #e93d44;  
}

.messages-container .chat-header {
    padding: 10px;
    background: #fafafa;
    border-bottom: 1px solid #ddd;
   display: inline-block;
    width: 100%;
}

.messages-container .messages-list {
    padding: 10px;
    overflow: auto;
}

.messages-container .chat-message.self {
    float: right;
}

.messages-container .chat-message {
    padding: 10px;
    background: #fff;
    margin-bottom: 10px;
    float: left;
    clear: both;
    box-shadow: 0px 1px 2px rgba(0,0,0,.2);
    max-width: 80%;
}


.messages-container .chat-message-text {
    margin-bottom: 5px;
    white-space: pre-line;
}

.messages-container .chat-message-timestamp {
    font-size: 11px;
    color: #aaa;
}

.messages-container {
    -webkit-flex: 1 1 60%;
            flex: 1 1 60%;
    -webkit-order: 2;
            order: 2;
    overflow: hidden;
}

.selected-thread {
    height: 100%;
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
            flex-flow: column;
}

.messages-list {
    flex: 1;
    position: relative;
    background: #eee;
}
.messages-list .typing {
    opacity: .5;
    padding-bottom: 4px;
    padding-top: 4px;
}

.composition-bar {
    border-top: 1px solid #ddd;
    background: #fafafa;
}

.composition-bar .message-input {
    font-size: 12px;
    resize: none;
    box-shadow: none;
    border-radius: 2px;
}
.composition-bar .message-input-wrapper {
    padding: 10px;
}

